# idf-im-cli

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.MD  Cargo.toml  README.md  eim_config.toml
.cargo/: config.toml
.github/workflows/: build_and_test.yaml  build_docs.yaml  build_rust.yaml  docs_build.yml  docs_production.yml  sync-jira.yml  test.yaml  test.yml
config/: default.toml
docs/: README.md  book.toml  conf_common.py
docs/en/: conf.py  configuration.rst  faqs.rst  index.rst  installation.rst  prerequisites.rst
docs/src/: SUMMARY.md  configuration.md  faqs.md  headless-usage.md  index.md  installation.md  prerequisites.md
locales/: app.yml
src/: main.rs
src/cli_args/: mod.rs
src/wizard/: helpers.rs  mod.rs  prompts.rs
test/: README.md  run_test.bat  run_test.sh
test/script/: CLITestRunner.js  commandLineArguments.test.js  commandLineArgumentsTest.js  installWizard.test.js  installWizardTest.js  main.test.js  prerequisitesTest.js
tests/: README.md  eim_config.toml  package-lock.json  package.json  results-basic_test.json  run_cnrunner.sh  run_pre_test.ps1  run_pre_test.sh  run_test.ps1  run_test.sh
tests/classes/: CLITestRunner.class.js  IDFTestRunner.class.js  logger.class.js
tests/runs/: CNmirrors.test.js  CNmirrors2.test.js  basicRun.test.js  defaultInstall.test.js  extendedRun.test.js  mirrorsRun.test.js  nonInteractiveInstall.test.js  testRun.test.js  variation1.test.js
tests/runs/suites/: backup.json  basic-test.json  basic_test.json  extended-test.json  extended_test.json  mirrors-test.json  mirrors_test.json
tests/script/: CLITestRunner.class.js  CLITestRunner.js  IDFTestRunner.class.js  commandLineArguments.test.js  installCustom.test.js  installNonInteractive.test.js  installWizard.test.js  logger.class.js  main.test.js  package-lock.json  package.json  postInstall.test.js  prerequisites.test.js  prerequisitesInstall.test.js  prerequisitesInstallRunner.test.js
