[package]
name = "idf-im-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = {version = "1.37.0", features=["full"]}
idf-im-lib = { git = "https://github.com/espressif/idf-im-lib.git", rev="9401b5fcebda4b7010d514fc010953ce29f9b732" } 
clap = {version = "4.5", features = ["cargo", "derive", "color"]}
crossterm = "0.27.0"
dialoguer = { git = "https://github.com/Hahihula/dialoguer.git", branch = "folder-select", features = ["folder-select"] }
byte-unit = "5.1.4"
indicatif = "0.17.8"
ratatui-splash-screen = "0.1.3"
rfd = "0.14.1"
walkdir = "2.5.0"
console = "0.15.8"
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.19.0"
log = "0.4.21"
simple_logger = "5.0.0"
rust-i18n = "3.0.1"
dirs = "5.0.1"
toml = "0.8.14"
log4rs = "1.3.0"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]