[package]
name = "eim"
version = "0.1.6"
edition = "2021"

[dependencies]
tokio = {version = "1.37.0", features=["full"]}
idf-im-lib = { git = "https://github.com/espressif/idf-im-lib.git", branch="master" } 
clap = {version = "4.5", features = ["cargo", "derive", "color"]}
dialoguer = { git = "https://github.com/Hahihula/dialoguer.git", branch = "folder-select", features = ["folder-select"] }
indicatif = "0.17.8"
console = "0.15.8"
config = "0.14.0"
git2 = "0.19.0"
log = "0.4.21"
rust-i18n = "3.0.1"
dirs = "5.0.1"
log4rs = "1.3.0"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]